added root, create new genre

--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Genres#index</h1>
-<p>Find me in app/views/genres/index.html.erb</p>
+<h1> Select a Genre </h1>
+<p> to see a list of albumns <p>
+<%= link_to 'create new genre', new_genre_path %>
